--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,17 +26,15 @@ jobs:
       run: chmod +x gradlew
 
     - name: Decode Keystore
-      env:
-        KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
       run: |
-        echo "$KEYSTORE_BASE64" | base64 --decode > HINGOLIHUBKEY
+        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > HINGOLIHUBKEY
         ls -la HINGOLIHUBKEY
 
     - name: Build Release AAB
-      env:
-        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
       run: ./gradlew bundleRelease
+      env:
+        KEYSTORE_PASSWORD: Som@1973
+        KEY_PASSWORD: Som@1973
 
     - name: Upload AAB
       uses: actions/upload-artifact@v4
